Add sales records, and sales summarry

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="cta secondary-cta">
-                <button id="btnDashboard" class="nav-btn outline">Go to Dashboard</button>
+                <button class="nav-btn outline btnDashboard">Go to Dashboard</button>
             </div>
 
             <h2 class="title">Welcome to Perveg Seat Cover’s Shop</h2>
@@ -55,6 +55,8 @@
     <!-- add record -->
     <section class="add-record">
         <div class="add-record-head">
+            <button class="nav-btn ghost left-btn sales_records">← Sales Records</button>
+
             <h3>Add Today’s Record</h3>
             <!-- Plus button in header -->
             <button id="addSalesFields" type="button" class="add-row-btn header-add-btn">＋</button>
@@ -92,7 +94,7 @@
         <section class="records-table-section">
             <div class="records-head">
 
-                <button id="dashboardBtn" class="nav-btn ghost left-btn">← Dashboard</button>
+                <button class="nav-btn ghost left-btn btnDashboard">← Dashboard</button>
 
                 <h3 class="records-title">
                     <div id="date">01/05/2026</div>
@@ -176,6 +178,7 @@
 
     <!-- DashBoard List -->
     <section class="dashboard-list">
+        <button class="nav-btn ghost left-btn sales_records">← Sales Records</button>
         <h3 class="dashboard-title">Dashboard Daily Sales Records</h3>
 
         <ul class="record-items">
@@ -213,6 +216,7 @@
 
     <!-- Add Cost Record Form -->
     <section class="cost-form">
+        <button class="nav-btn ghost left-btn sales_records">← Sales Records</button>
         <h3>Add Cost Records</h3>
 
         <form>
