edit particular sales records and delete particular sales records

--- a/index.html
+++ b/index.html
@@ -178,8 +178,13 @@
 
     <!-- DashBoard List -->
     <section class="dashboard-list">
-        <button class="nav-btn ghost left-btn sales_records">← Sales Records</button>
-        <h3 class="dashboard-title">Dashboard Daily Sales Records</h3>
+        <div class="dashboard-head">
+            <button class="nav-btn ghost left-btn sales_records">← Sales Records</button>
+            <h3 class="dashboard-title">
+                Dashboard Daily Sales Records
+            </h3>
+        </div>
+
 
         <ul class="record-items">
             <li>
