--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
             <div class="records-summary">
                 <div class="total-sell">
-                    Total Sell: ৳<span id="totalSell">400</span>
+                    Total Sell: ৳<span id="totalSell">0</span>
                 </div>
                 <div class="total-profit">
-                    Total Profit: ৳<span id="totalProfit">500</span>
+                    Total Profit: ৳<span id="totalProfit">0</span>
                 </div>
             </div>
 
@@ -162,7 +162,7 @@
                         </tr>
                     </thead>
 
-                    <tbody id="cost-table-body">
+                    <tbody id="costTableBody">
                     </tbody>
 
                 </table>
@@ -170,10 +170,10 @@
 
             <div class="records-summary">
                 <div class="total-cost">
-                    Total Cost: ৳<span id="totalCost">400</span>
+                    Total Cost: ৳<span id="totalCost">0</span>
                 </div>
                 <div class="net-profit">
-                    Net Profit: ৳<span id="netProfit">200</span>
+                    Net Profit: ৳<span id="netProfit">0</span>
                 </div>
             </div>
 
@@ -195,11 +195,11 @@
             </button>
         </div>
 
-        <form>
+        <form id="costRecordForm">
 
-            <div class="form-body">
+            <div class="form-body set-of-cost-input-Fields">
                 <div class="input-row">
-                    <input type="text" placeholder="Cost details (Snacks, Pocket Money)" required />
+                    <input type="text" placeholder="Cost details" required />
                 </div>
 
                 <div class="input-row">
