--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
         </form>
     </section>
 
-
     <!-- sales records and cost records -->
     <div class="sale-cost-records">
         <!-- sales records table -->
@@ -184,7 +183,7 @@
     <!-- Cost Form Section -->
     <section class="form-section cost-form-section">
         <div class="form-head">
-            <button class="nav-btn ghost left-btn saleCostRecords">
+            <button class="nav-btn ghost left-btn sale-cost-records-button">
                 ← Sale/Cost Records
             </button>
 
