--- a/index.html
+++ b/index.html
@@ -225,36 +225,7 @@
         </div>
 
 
-        <ul class="record-items">
-            <li>
-                <span class="record-date">2026-01-02</span>
-                <div class="record-actions">
-                    <button class="action-btn open">Open</button>
-                    <button class="action-btn delete">Delete</button>
-                </div>
-            </li>
-            <li>
-                <span class="record-date">2026-01-02</span>
-                <div class="record-actions">
-                    <button class="action-btn open">Open</button>
-                    <button class="action-btn delete">Delete</button>
-                </div>
-            </li>
-            <li>
-                <span class="record-date">2026-01-03</span>
-                <div class="record-actions">
-                    <button class="action-btn open">Open</button>
-                    <button class="action-btn delete">Delete</button>
-                </div>
-            </li>
-            <li>
-                <span class="record-date">2026-01-04</span>
-                <div class="record-actions">
-                    <button class="action-btn open">Open</button>
-                    <button class="action-btn delete">Delete</button>
-                </div>
-            </li>
-        </ul>
+        <ul id="dashboardRecords" class="record-items"></ul>
     </section>
 
 
